Fixed text overflow @ entry wrappers.

--- a/app/views/history/styles/entry.styl
+++ b/app/views/history/styles/entry.styl
@@ -6,6 +6,7 @@
   display: block;
   position:relative;
   min-width:320px
+  overflow:hidden
 
   &:nth-child(even)
     background: #f7f7f7;
