--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -89,6 +89,9 @@ body
   color: #373942
   padding-bottom:35px
 
+body
+  min-width:760px
+
 li
   list-style:none
   margin:0
